// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAvailableDrillTargets > gets propper available drill targets - ignoring column attributes 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.f_product.product",
            "name": "Product",
            "ref": undefined,
            "uri": "",
          },
          "granularity": null,
          "identifier": "label.f_product.product.name",
          "localIdentifier": "a_label.f_product.product.name",
          "name": "Product Name",
          "primaryLabel": {
            "identifier": "attr.f_product.product",
            "type": "displayForm",
          },
          "ref": undefined,
          "totalItems": [],
          "uri": "",
        },
      },
      "intersectionAttributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.f_product.product",
              "name": "Product",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "label.f_product.product.name",
            "localIdentifier": "a_label.f_product.product.name",
            "name": "Product Name",
            "primaryLabel": {
              "identifier": "attr.f_product.product",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
      ],
    },
    {
      "attribute": {
        "attributeHeader": {
          "formOf": {
            "identifier": "f_owner.department_id",
            "name": "Department",
            "ref": undefined,
            "uri": "",
          },
          "granularity": null,
          "identifier": "f_owner.department_id",
          "localIdentifier": "a_f_owner.department_id",
          "name": "Department",
          "primaryLabel": {
            "identifier": "f_owner.department_id",
            "type": "displayForm",
          },
          "ref": undefined,
          "totalItems": [],
          "uri": "",
        },
      },
      "intersectionAttributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.f_product.product",
              "name": "Product",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "label.f_product.product.name",
            "localIdentifier": "a_label.f_product.product.name",
            "name": "Product Name",
            "primaryLabel": {
              "identifier": "attr.f_product.product",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "f_owner.department_id",
              "name": "Department",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "f_owner.department_id",
            "localIdentifier": "a_f_owner.department_id",
            "name": "Department",
            "primaryLabel": {
              "identifier": "f_owner.department_id",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
      ],
    },
  ],
  "measures": [
    {
      "attributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.f_product.product",
              "name": "Product",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "label.f_product.product.name",
            "localIdentifier": "a_label.f_product.product.name",
            "name": "Product Name",
            "primaryLabel": {
              "identifier": "attr.f_product.product",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "f_owner.department_id",
              "name": "Department",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "f_owner.department_id",
            "localIdentifier": "a_f_owner.department_id",
            "name": "Department",
            "primaryLabel": {
              "identifier": "f_owner.department_id",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "f_opportunitysnapshot.forecastcategory_id",
              "name": "Forecast Category",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
            "localIdentifier": "a_f_opportunitysnapshot.forecastcategory_id",
            "name": "Forecast Category",
            "primaryLabel": {
              "identifier": "f_opportunitysnapshot.forecastcategory_id",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "f_owner.region_id",
              "name": "Region",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "f_owner.region_id",
            "localIdentifier": "a_f_owner.region_id",
            "name": "Region",
            "primaryLabel": {
              "identifier": "f_owner.region_id",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
      ],
      "measure": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
          "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          "name": "Amount",
          "ref": undefined,
        },
      },
    },
    {
      "attributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.f_product.product",
              "name": "Product",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "label.f_product.product.name",
            "localIdentifier": "a_label.f_product.product.name",
            "name": "Product Name",
            "primaryLabel": {
              "identifier": "attr.f_product.product",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "f_owner.department_id",
              "name": "Department",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "f_owner.department_id",
            "localIdentifier": "a_f_owner.department_id",
            "name": "Department",
            "primaryLabel": {
              "identifier": "f_owner.department_id",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "f_opportunitysnapshot.forecastcategory_id",
              "name": "Forecast Category",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "f_opportunitysnapshot.forecastcategory_id",
            "localIdentifier": "a_f_opportunitysnapshot.forecastcategory_id",
            "name": "Forecast Category",
            "primaryLabel": {
              "identifier": "f_opportunitysnapshot.forecastcategory_id",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "f_owner.region_id",
              "name": "Region",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "f_owner.region_id",
            "localIdentifier": "a_f_owner.region_id",
            "name": "Region",
            "primaryLabel": {
              "identifier": "f_owner.region_id",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
      ],
      "measure": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
          "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          "name": "Won",
          "ref": undefined,
        },
      },
    },
  ],
}
`;

exports[`getAvailableDrillTargets > gets propper available drill targets for duplicated row attribute 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.f_product.product",
            "name": "Product",
            "ref": undefined,
            "uri": "",
          },
          "granularity": null,
          "identifier": "label.f_product.product.name",
          "localIdentifier": "a_label.f_product.product.name",
          "name": "Product Name",
          "primaryLabel": {
            "identifier": "attr.f_product.product",
            "type": "displayForm",
          },
          "ref": undefined,
          "totalItems": [],
          "uri": "",
        },
      },
      "intersectionAttributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.f_product.product",
              "name": "Product",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "label.f_product.product.name",
            "localIdentifier": "a_label.f_product.product.name",
            "name": "Product Name",
            "primaryLabel": {
              "identifier": "attr.f_product.product",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
      ],
    },
    {
      "attribute": {
        "attributeHeader": {
          "formOf": {
            "identifier": "f_owner.region_id",
            "name": "Region",
            "ref": undefined,
            "uri": "",
          },
          "granularity": null,
          "identifier": "f_owner.region_id",
          "localIdentifier": "a_f_owner.region_id",
          "name": "Region",
          "primaryLabel": {
            "identifier": "f_owner.region_id",
            "type": "displayForm",
          },
          "ref": undefined,
          "totalItems": [],
          "uri": "",
        },
      },
      "intersectionAttributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.f_product.product",
              "name": "Product",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "label.f_product.product.name",
            "localIdentifier": "a_label.f_product.product.name",
            "name": "Product Name",
            "primaryLabel": {
              "identifier": "attr.f_product.product",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "f_owner.region_id",
              "name": "Region",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "f_owner.region_id",
            "localIdentifier": "a_f_owner.region_id",
            "name": "Region",
            "primaryLabel": {
              "identifier": "f_owner.region_id",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
      ],
    },
    {
      "attribute": {
        "attributeHeader": {
          "formOf": {
            "identifier": "attr.f_product.product",
            "name": "Product",
            "ref": undefined,
            "uri": "",
          },
          "granularity": null,
          "identifier": "label.f_product.product.name",
          "localIdentifier": "product.name.test",
          "name": "Product Name",
          "primaryLabel": {
            "identifier": "attr.f_product.product",
            "type": "displayForm",
          },
          "ref": undefined,
          "totalItems": [],
          "uri": "",
        },
      },
      "intersectionAttributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.f_product.product",
              "name": "Product",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "label.f_product.product.name",
            "localIdentifier": "a_label.f_product.product.name",
            "name": "Product Name",
            "primaryLabel": {
              "identifier": "attr.f_product.product",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "f_owner.region_id",
              "name": "Region",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "f_owner.region_id",
            "localIdentifier": "a_f_owner.region_id",
            "name": "Region",
            "primaryLabel": {
              "identifier": "f_owner.region_id",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.f_product.product",
              "name": "Product",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "label.f_product.product.name",
            "localIdentifier": "product.name.test",
            "name": "Product Name",
            "primaryLabel": {
              "identifier": "attr.f_product.product",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
      ],
    },
  ],
  "measures": [
    {
      "attributes": [
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.f_product.product",
              "name": "Product",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "label.f_product.product.name",
            "localIdentifier": "a_label.f_product.product.name",
            "name": "Product Name",
            "primaryLabel": {
              "identifier": "attr.f_product.product",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "f_owner.region_id",
              "name": "Region",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "f_owner.region_id",
            "localIdentifier": "a_f_owner.region_id",
            "name": "Region",
            "primaryLabel": {
              "identifier": "f_owner.region_id",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
        {
          "attributeHeader": {
            "formOf": {
              "identifier": "attr.f_product.product",
              "name": "Product",
              "ref": undefined,
              "uri": "",
            },
            "granularity": null,
            "identifier": "label.f_product.product.name",
            "localIdentifier": "product.name.test",
            "name": "Product Name",
            "primaryLabel": {
              "identifier": "attr.f_product.product",
              "type": "displayForm",
            },
            "ref": undefined,
            "totalItems": [],
            "uri": "",
          },
        },
      ],
      "measure": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
          "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          "name": "Amount",
          "ref": undefined,
        },
      },
    },
  ],
}
`;
